package umlExample;

// Реализация CalculatorView
class CalculatorViewImpl implements CalculatorView {
    public void setObserver(ViewObserver observer) {
        // ...
    }

    public void updateResult(double result) {
        // ...
    }

    public void clearScreen() {
        // ...
    }
}
